Changelog
=========

1.0.7 (unreleased)
------------------

1.0.6 (2012-09-28)
------------------

* Tweak CSS to use outline instead of border.
  [elro]

* Avoid theming ajax response.
  [elro]

* Ensure context is a content item of some sort.
  [elro]

* Import getSite from zope.component to avoid dependency on zope.app.component.
  [hvelarde]

* Import ViewPageTemplateFile from zope.browserpage to avoid dependency on
  zope.app.pagetemplate.
  [hvelarde]

* Added french translation.
  [phgross]

* Trigger change handler when used with datagrid
  [kingel]

* Use an ajax fetch for the initial call
  [kingel]

* Fix url in display templates, so that it uses absolute urls.
  [phgross]

* pep8
  [joka]

* Fix term title genration to use the brain id if there is not brain title
  [joka]

* Added Italian translation.
  [gborelli]

* Added Finnish (fi) translation.
  [dokai]

* By default filter out nodes that are not selectable and not folderish.
  This can be overridden on the widget by setting show_all_nodes to True.
  [maurits]

* Added Dutch translation.
  [maurits]

1.0.5 (2012-02-20)
------------------

* Added Spanish translation
  [hvelarde]

1.0.4 (2011-10-04)
------------------

* fix _getBrainByValue to check if value is traversable
  first so we can provide the correct token.
  [vangheem]

1.0.3 (2011-09-24)
------------------

* Add zh_CN translation.
  [jianaijun]

1.0.2 (2011-07-02)
------------------

* Fix regression that broke the browsing with JQuery < 1.4.
  [davisagli]

1.0.1 (2011-05-16)
------------------

* Make placeholder terms for hidden / missing items, so that you can still see
  something in the editing interface and not accidentally remove them. Ideally
  we should say if a page is invisible or missing, but not today.
  [lentinj]

* Use javascript function from plone.formwidget.autocomplete to add new input
  boxes, make javascript as clone-safe (when making new rows in datagridfield)
  as possible
  [lentinj]
